--- a/src/main/resources/templates/books/list.html
+++ b/src/main/resources/templates/books/list.html
@@ -5,25 +5,38 @@
     <title>書籍登録一覧画面</title>
 </head>
 <body>
+<form th:action="@{/books/create}" method="post">
     <table>
-        <tr th:each="book : ${books}">
-            <td th:text="${book.id}"></td>
-            <td th:text="${book.title}"></td>
-            <td th:text="${book.writter}"></td>
-            <td th:text="${book.publisher}"></td>
-            <td th:text="${book.price}"></td>
-        </tr>
+        <tr><td>タイトル:</td><td><input type="text" name="title" /></td></tr>
+        <tr><td>著者：</td><td><input type="text" name="writter" /></td></tr>
+        <tr><td>出版社：</td><td><input type="text" name="publisher" /></td></tr>
+        <tr><td>価格：</td><td><input type="text" name="price" /></td></tr>
     </table>
+    <input type="submit" value="作成"/>
+</form>
 
-    <form th:action="@{/books/list}" method="post">
-            <table>
-                <tr><td>ID:</td><td><input type="text" name="id" /></td></tr>
-                <tr><td>タイトル:</td><td><input type="text" name="title" /></td></tr>
-                <tr><td>著者：</td><td><input type="text" name="writter" /></td></tr>
-                <tr><td>出版社：</td><td><input type="text" name="publisher" /></td></tr>
-                <tr><td>価格：</td><td><input type="text" name="price" /></td></tr>
-            </table>
-            <input type="submit" />
-        </form>
+<hr />
+
+<table>
+    <tr th:each="book : ${books}">
+        <td th:text="${book.id}"></td>
+        <td th:text="${book.title}"></td>
+        <td th:text="${book.writter}"></td>
+        <td th:text="${book.publisher}"></td>
+        <td th:text="${book.price}"></td>
+        <td>
+            <form th:action="@{/books/edit}" method="post">
+                <input type="submit" name="form" value="編集" />
+                <input type="hidden" name="id" th:value="${book.id}" />
+            </form>
+        </td>
+        <td>
+            <form th:action="@{/books/delete}" method="post">
+                <input type="submit" name="form" value="削除" />
+                <input type="hidden" name="id" th:value="${book.id}" /> 
+            </form>
+        </td>
+    </tr>
+</table>
 </body>
 </html>
